<resources>
    <string name="app_name">rechner</string>
    <string name="hint1">Wert 1</string>
    <string name="hint2">Wert 2</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="button1">Berechnen</string>
    <string name="button2">MS</string>
    <string name="button3">MR</string>
    <string name="Reset">Reset</string>
    <string name="Info">Info</string>
    <string-array name="spinner_array">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
    </string-array>
</resources>